--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,96 @@
 ---
-title: Le Wagon Middleman boilerplate
+title: Bilan-neuropsy
 ---
 
-<div class="welcome text-center padded">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+<div id="banner" class="smooth-scrollable">
+
+  <div class="fade-and-slide">
+    <h1>Bilan Neuropsy</h1>
+    <br>
+    <p>Anne Tiberghien</p>
+    <p>Psychologue Neuropsychologue</p>
+    <br>
+    <a href="#" data-toggle="modal" data-target="#subscribe-modal" class="btn-medium">prendre un Rdv</a>
+  </div>
+
+  <a href="#description"><i class="fa fa-angle-down fa-6 pulse scroll-btn"></i></a>
+</div>
+
+<div class="bg-primary padded" id="description">
+  <div class="container text-center" id="features">
+    <div class="row">
+
+      <div class="col-xs-12 col-sm-6 ">
+        <div class="card" data-sr="enter bottom and scale up 20% over 1s">
+          <%= image_tag "paper.svg" %>
+          <h2>Bilan</h2>
+          <p>blabla<strong><strong></p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 ">
+        <div class="card" data-sr="enter bottom and scale up 20% over 1.5s">
+          <%= image_tag "computer.svg" %>
+          <h2>Test QI</h2>
+          <p> Bla bla <strong></strong></p>
+        </div>
+      </div>
+      
+      </div>
+    </div>
+  </div>
+  <a href="#newsletter"><i class="fa fa-angle-down fa-6 pulse scroll-btn"></i></a>
+</div>
+
+<div class="text-center padded smooth-scrollable" id="newsletter">
+  <h2>Gardons contact !</h2>
+  <p>Laissez nous votre email</p>
+  <form class="form-inline">
+    <input type="email" placeholder="bob@gmail.com" class="form-control">
+    <input type="submit" value="Subscribe" class="btn btn-primary btn-bordered btn-bordered-primary">
+  </form>
+</div>
+
+<div id="map" style="width: 100%;" class="smooth-scrollable"></div>
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
+
+<script type="text/javascript">
+var myLatlng = new google.maps.LatLng(48.852937,2.364178);
+
+var myOptions = {
+  zoom: 16,
+  center: myLatlng,
+  scrollwheel: false,
+  mapTypeId: google.maps.MapTypeId.ROADMAP,
+  styles: [{"featureType":"landscape","stylers":[{"saturation":-100},{"lightness":65},{"visibility":"on"}]},{"featureType":"poi","stylers":[{"saturation":-100},{"lightness":51},{"visibility":"simplified"}]},{"featureType":"road.highway","stylers":[{"saturation":-100},{"visibility":"simplified"}]},{"featureType":"road.arterial","stylers":[{"saturation":-100},{"lightness":30},{"visibility":"on"}]},{"featureType":"road.local","stylers":[{"saturation":-100},{"lightness":40},{"visibility":"on"}]},{"featureType":"transit","stylers":[{"saturation":-100},{"visibility":"simplified"}]},{"featureType":"administrative.province","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"labels","stylers":[{"visibility":"on"},{"lightness":-25},{"saturation":-100}]},{"featureType":"water","elementType":"geometry","stylers":[{"hue":"#ffff00"},{"lightness":-25},{"saturation":-97}]}]
+};
+
+var map = new google.maps.Map(document.getElementById('map'), myOptions);
+var marker = new google.maps.Marker({
+  position: myLatlng,
+  map: map,
+  title:"You are here!"
+});
+</script>
+
+<script>
+$(function() {
+  // Smooth scroll
+  $('a[href*=#]:not([href=#])').click(function() {
+    if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+      var target = $(this.hash);
+      target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+      if (target.length) {
+        $('html,body').animate({
+          scrollTop: target.offset().top
+        }, 1000);
+        return false;
+      }
+    }
+  });
+
+  // Scroll reveal
+  window.sr = new scrollReveal();
+
+});
+</script>
