--- a/source/stylesheets/config/_bootstrap_variables.css.scss
+++ b/source/stylesheets/config/_bootstrap_variables.css.scss
@@ -4,11 +4,10 @@
  * ------------------------------------- */
 
 // General style
-$font-family-sans-serif:  $base-font;
+$font-family-sans-serif:  $open-sans;
 $body-bg:                 lighten(#000, 93.5%);
 $font-size-base:          $base-size;
 $line-height-base:        $base-height;
-$headings-font-family:    $header-font;
 
 // Semantic color scheme
 $brand-primary:   $blue;
@@ -18,6 +17,6 @@ $brand-danger:    $red;
 $brand-warning:   $orange;
 
 // Buttons / inputs radius
-$border-radius-base:  2px;
-$border-radius-large: 2px;
-$border-radius-small: 2px;
+$border-radius-base:  4px;
+$border-radius-large: 4px;
+$border-radius-small: 4px;
