--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -39,7 +39,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li>
               <% link_to "/pricing.html" do %>
-                <i class="fa fa-dollar"></i> Tarifs
+                <i class="fa fa-euro"></i> Tarifs
               <% end %>
             </li>
             <li>
