--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -7,15 +7,15 @@ title: Comment nous trouver
   <br>
   <ul class="list-inline">
     <li>
-      <img src="http://placehold.it/200x200" class="img-circle" alt="">
+      <img src="http://placehold.it/200x200" class="img-circle" alt="AG">
       <h3>Ag</h3>
     </li>
     <li>
-      <img src="http://placehold.it/200x200" class="img-circle" alt="">
+      <img src="http://placehold.it/200x200" class="img-circle" alt="Didit">
       <h3>Didit</h3>
     </li>
     <li>
-      <img src="http://placehold.it/200x200" class="img-circle" alt="">
+      <img src="http://placehold.it/200x200" class="img-circle" alt="Newton">
       <h3>Newton</h3>
     </li>
   </ul>
