--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -50,7 +50,7 @@ title: Bilan-neuropsy
   </form>
 </div>
 
-<div id="map" style="width: 100%;" class="smooth-scrollable"></div>
+<div id="map" style="width: 100%; height: 550px;" class="smooth-scrollable"></div>
 
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
 
